testdata/golden/sema/valid/entrypoint_overload/only.fmt
pragma module;

@entrypoint
@overload
fn main() {}

@overload
fn main(x: int) {}
