testdata/golden/sema/invalid/pragma_no_std_stdlib_import.fmt
pragma no_std

import stdlib/option;

fn main() {}
